# ffmpeg_apps

./: Readme.md  ffmpeg_build.sh  ffmpeg_configure.sh
apps/: CMakeLists.txt  build_python_wheel.sh  ffmpeg_lib.i  setup.py
apps/av_to_es/: CMakeLists.txt  av_to_es.c
apps/python_test_apps/: ts_muxer_app.py
apps/transcoder/: CMakeLists.txt  transcoding.c
apps/ts_muxer/: CMakeLists.txt
apps/ts_muxer/src/: circular_buf.c  circular_buf.h  implementation_notes.txt  ts_muxer.c  ts_muxer.h  ts_muxer_app.c  ts_muxer_fifo.c  ts_muxer_fifo.h  ts_muxer_python_bind.c
libavformat/: mpegts.h  mpegtsenc.c
